--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
         "safer-buffer": "^2.1.2",
         "send": "^0.18.0",
         "seq-queue": "^0.0.5",
+        "sequelize": "^6.37.1",
         "serve-static": "^1.15.0",
         "set-function-length": "^1.2.1",
         "setprototypeof": "^1.2.0",
