--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "main": "server.js",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js"
+        "start": "node server.js",
+        "dev": "nodemon server"
     },
     "dependencies": {
         "accepts": "^1.3.8",
