--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "has-proto": "^1.0.3",
         "has-symbols": "^1.0.3",
         "hasown": "^2.0.1",
+        "helmet": "^7.1.0",
         "http-errors": "^2.0.0",
         "iconv-lite": "^0.4.24",
         "inherits": "^2.0.4",
